Changed h1 to use an image to fix display issues on mobile devices. A few color changes.

--- a/public/stylesheets/core.less
+++ b/public/stylesheets/core.less
@@ -16,26 +16,8 @@ button, .button {
 	}
 }
 
-h1, h3 {
+h3 {
 	font-family: @honeyscript;
-}
-
-h1 {
-	font-size: 3.3em;
-	
-	a {
-		color: @purple;
-		
-		&:hover {
-			color: @purple;
-		}
-	}
-	
-	span {
-		font-family: @hefty;
-		font-size: 0.3em;
-		color: @pink;
-	}
 }
 
 h2 {
@@ -78,7 +60,7 @@ h2 {
 
 @media only screen and (max-width: 767px) {
 	h1 {
-		margin-bottom: 0;
+		margin: 1em 0 1em 0;
 		text-align: center;
 	}
 	
