--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -31,20 +31,20 @@
 	}
 	
 	.fa-stack-2x {
-		color: @purple;
+		color: black;
 	}
 }
 
 #home-about {
 	background-color: @lightGray;
-	color: black;
+	color: darken(@lightGray, 50%);
 	
 	img {
 		padding-top: 1em;
 	}
 	
 	h3 {
-		color: darken(@lightGray, 40%);
+		color: @purple;
 		margin-top: 0.5em;
 	}
 	
